--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
 body {
   margin: 0;
   font-family: 'Ubuntu', sans-serif;
-  background-color: #f5f5f5; /* Light background color */
+  background-color:#232931;
+  color: white;
 }
 .dashboard {
   display: grid;
@@ -18,7 +19,7 @@ body {
   padding: 10px;
   width: 100%;
   height: 100%;
-  background-color: #91F8B1;
+  background-color: #00000064;
 }
 .line_graph
 {
@@ -26,8 +27,9 @@ body {
 }
 .line_graph h1
 {
+  font-weight: 700;
   margin-bottom: 25px;
-  color: #f74646; 
+  color: #4ECCA3; 
   margin-top: 5px;
 }
 .currencies
@@ -52,5 +54,5 @@ body {
   padding: 10px;
   width: 100%;
   height: 100%;
-  background-color: #91F8B1;
+  background-color: #00000064;
 }
