--- a/src/Components/CurrencySelector.css
+++ b/src/Components/CurrencySelector.css
@@ -1,7 +1,3 @@
-.logo_div img {
-  height: 200px;
-  width: 100%;
-}
 
 .currency-form {
   display: flex;
@@ -11,9 +7,9 @@
 .currency-form label {
   margin-right: 10px;
   font-size: 18px;
-  color: #333;
+  color: #ffffff;
   margin-top: 10px;
-  font-family: 'Arial', sans-serif; /* Improved font presentation */
+  font-family: 'Arial', sans-serif; 
 }
 
 .currency-form select {
@@ -28,8 +24,8 @@
 
 .currency-form select:hover,
 .currency-form select:focus {
-  border-color: #4caf50; /* Change border color on hover/focus */
-  box-shadow: 0 0 5px rgba(76, 175, 80, 0.7); /* Add a subtle box-shadow on hover/focus */
+  border-color: #b7ffb9;
+  box-shadow: 0 0 5px #b7ffb9; 
 }
 
 .currency-form select option {
