--- a/src/Components/Converter.css
+++ b/src/Components/Converter.css
@@ -28,7 +28,7 @@ label {
   margin-top: 10px;
   margin-bottom: 10px;
   font-weight: 700;
-  color: #333; /* Dark gray color */
+  color: #ffffff; /* Dark gray color */
   font-size: 18px;
   width: 60%;
   text-align: center;
